[package]
name = "loopdev-erikh"
description = "Setup and control loop devices"
version = "0.5.0"
authors = ["Erik Hollensbe <erik@hollensbe.org>", "Michael Daffin <michael@daffin.io>"]
license = "MIT"
documentation = "https://docs.rs/loopdev-erikh"
repository = "https://github.com/erikh/loopdev"
readme = "README.md"
keywords = ["loop", "losetup"]
edition = "2021"

[features]
direct_io = []

[dependencies]
errno = "0.2.8"
libc = "0.2.105"

[build-dependencies]
bindgen = { version = "0.63.0", default-features = false, features = ["runtime"] }

[dev-dependencies]
glob = "0.3.0"
gpt = "3.0.0"
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tempfile = "3.2.0"
