[package]
name = "loopdev-erikh"
description = "Setup and control loop devices"
version = "0.5.0"
authors = ["Erik Hollensbe <erik@hollensbe.org>", "Michael Daffin <michael@daffin.io>"]
license = "MIT"
documentation = "https://docs.rs/loopdev-erikh"
repository = "https://github.com/erikh/loopdev"
readme = "README.md"
keywords = ["loop", "losetup"]
edition = "2021"

[lib]
name = "loopdev"

[features]
direct_io = []

[dependencies]
errno = "^0.2"
libc = "^0.2"

[build-dependencies]
bindgen = { version = "^0.63", default-features = false, features = ["runtime"] }

[dev-dependencies]
glob = "^0.3"
gpt = "^3"
lazy_static = "^1.4"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tempfile = "^3"
